src/utils/sak/src/cmds/compile_post/tests/err-unused-ref-2/expected.stderr
[31merror:[0m unused ref
   ╭─[input:5:2]
   │
 5 │ <ref>
   │  ─┬─  
   │   ╰─── unused ref
───╯

compilation failed
